# botcheck

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
services/agent/: Dockerfile  pyproject.toml
services/agent/src/: agent.py  agent_cache_surface.py  agent_final_ack_surface.py  ai_caller_policy.py  audio.py  branch_classifier.py  cache.py  callback_final_ack.py  callback_handler.py  callback_transport.py  callbacks.py  config.py  direct_http.py  direct_http_runtime.py  entrypoint_coordinator.py  graph.py  heartbeat.py  heartbeat_context.py  logging_setup.py  loop_runtime_helpers.py  media_engine.py  metrics.py  mock_agent.py  mock_bot.py  mock_bot_responses.py  openai_chat_client.py  playground_ai_debug.py  playground_events.py  playground_runtime.py  provider_runtime_context.py  scenario_ai_loop.py  scenario_bot_listener.py  scenario_bot_turn.py  scenario_hangup.py  scenario_harness_audio.py  scenario_harness_turn.py  scenario_kind.py  scenario_loop_executor.py  scenario_run_finalize.py  scenario_runner.py  (+11 more)
services/agent/tests/: conftest.py  test_agent_final_ack_surface.py  test_agent_logging_setup.py  test_agent_metrics_provider_circuit.py  test_agent_metrics_registration.py  test_ai_caller_policy.py  test_audio_stt_provider.py  test_branch_classifier.py  test_callback_transport.py  test_callbacks.py  test_config_defaults.py  test_direct_http.py  test_direct_http_runtime.py  test_entrypoint_tracing.py  test_final_ack.py  test_graph.py  test_heartbeat.py  test_loop_runtime_helpers.py  test_media_engine.py  test_mock_agent.py  test_mock_bot_responses.py  test_openai_chat_client.py  test_openai_chat_client_pool.py  test_playground_runtime.py  test_provider_runtime_context.py  test_recording.py  test_run_scenario_cache.py  test_scenario_ai_loop.py  test_scenario_bot_listener.py  test_scenario_bot_turn.py  test_scenario_harness_audio.py  test_scenario_harness_turn.py  test_scenario_kind.py  test_scenario_loop_executor.py  test_scenario_run_finalize.py  test_scenario_runner_ai.py  test_scenario_time_route.py  test_scenario_turn_cursor.py  test_scenario_turn_helpers.py  test_scenario_wait.py  (+6 more)
services/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/botcheck_api/: admin_cli.py  admin_recovery.py  audit.py  auth_security.py  capacity.py  config.py  database.py  exceptions.py  logging_setup.py  main.py  metrics.py  models.py  platform_settings_bootstrap.py  redaction.py  repo_grai.py  repo_packs.py  repo_runs.py  repo_scenarios.py  retention.py  scheduling.py  sip.py  sip_pools.py  sip_slots_startup.py  store.py  store_repo.py  store_service.py  stt_provider.py  telemetry.py  tenants_bootstrap.py  text_normalization.py  totp.py  tts_provider.py  users.yaml  users_bootstrap.py
services/api/scripts/: admin_recovery.py  export_openapi.py  rejudge_run.py  sync_sip_trunks.py
services/api/tests/: _packs_test_helpers.py  auth_login_test_helpers.py  conftest.py  factories.py  runs_test_helpers.py  scenario_test_helpers.py  scenarios_test_helpers.py  test_admin_audit.py  test_admin_recovery.py  test_admin_role_matrix.py  test_admin_sip.py  test_admin_system.py  test_admin_tenants.py  test_admin_users.py  test_ai_personas_crud.py  test_ai_scenarios_crud.py  (+55 more)
services/judge/: Dockerfile  pyproject.toml
(+813 files in other folders)
